Closed
Bug 235535
Opened 22 years ago
Closed 22 years ago
Page body appears off the screen on the right , scroll required to see
Categories
(Core :: Layout: Tables, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: ahmetafsinakin, Assigned: bernd_mozilla)
References
()
Details
(Keywords: testcase)
Attachments
(2 files)
|
888 bytes,
text/html
|
Details | |
|
13.45 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7a) Gecko/20040219 Firefox/0.8.0+
in http://www.liberal.org.tr/guncel/Diger/my_rejim.htm , Page body seems off the
screen, you have to scroll horizontally to see it.
all the articles on the main page appears like that. looks like a standards -
bad design issue.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Comment 1•22 years ago
|
||
Confirmed (build id: 2004012808) on win2k.
This is *NOT* bug 217369 .
I use a buildrelease with a patch for that bug.
| Reporter | ||
Comment 3•22 years ago
|
||
when i wanted to edit the page with composer for a test sample. But it looks all
right in the preview tab in there. strange.
Comment 4•22 years ago
|
||
Updated•22 years ago
|
Updated•22 years ago
|
Whiteboard: DUPEME
Attachment #142592 -
Flags: superreview?(bzbarsky)
Attachment #142592 -
Flags: review?(bzbarsky)
Comment 7•22 years ago
|
||
Comment on attachment 142592 [details] [diff] [review]
patch
>Index: nsCellMap.cpp
> if (origData) {
> origData->Init(aCellFrame);
>+ // we are replacing a dead cell, increase the number of cells
>+ // originating at this column
Could you add an assert right here that origData is in fact dead?
>+ nsColInfo* colInfo = aMap.GetColInfoAt(startColIndex);
>+ if (colInfo) {
Maybe NS_WARN_IF_FALSE or NS_ASSERTION that colInfo is not null in addition to
the null check? I assume it being null is an error condition that really
should not happen?
r+sr=bzbarsky
Attachment #142592 -
Flags: superreview?(bzbarsky)
Attachment #142592 -
Flags: superreview+
Attachment #142592 -
Flags: review?(bzbarsky)
Attachment #142592 -
Flags: review+
fix checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•