when dead cells are replaced in the cellmap, the corresponding column should be informed that it now contains one more cell bug 235535 r/sr=bzbarsky